# simple-threads

./: .env.example  .gitignore  app.py  export-requirements.sh  pyproject.toml
app/: config.py  main.py
app/auth/: api_key_header.py
app/handlers/: get_item.py  item_handler.py  list_items.py  user_handler.py
app/models/: user.py
app/requests/: user_store_request.py  user_update_request.py
bruno/: bruno.json  create-item.bru  delete-item.bru  delete-user.bru  get-item.bru  get-user.bru  hello.bru  list-items.bru  list-users.bru  root.bru  update-item.bru  update-user.bru
bruno/environments/: local.bru  production.bru
bruno/serverless-fastapi-example/: bruno.json
bruno/serverless-fastapi-example/environments/: production.bru
cdk_python_example/: cdk_python_example_stack.py
deployment/: cdk_python_example_stack.py  simple_threads_stack.py
deployment/layer/: requirements.txt
lambda/: hello.py
tests/unit/: test_cdk_python_example_stack.py
